# Stepik-Mentor-Metric

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod-debug.yml  docker-compose.prod.yml  migrate.sh  pyproject.toml  settings.prod-debug.toml  settings.toml
.github/workflows/: build-and-push.yml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2026_02_12_1442-0008b08f50d6_init_users_with_email.py  2026_02_13_2042-c3a250ce9073_remove_email.py  2026_02_17_1016-14dabae84b86_init.py  2026_02_28_2108-a6905be4fbbf_rename_field.py  2026_02_28_2132-d988febd40a6_update_field.py  2026_03_03_1035-b8560a102216_add_is_from_mentor_field.py  2026_03_03_1252-551c633e6a4d_change_models.py  2026_03_04_1551-99f15cc9a01d_update_mentor_statistic.py  2026_03_05_1450-cab4c767ede1_init.py  2026_03_15_1155-ff6299978d7f_init.py  2026_03_26_1552-eb1aa5ffa66e_init.py  2026_04_03_1534-3d45540754b6_init_mirgate.py  2026_04_06_2002-4aa789861005_add_fields_to_user.py  2026_04_06_2058-4e8cdc62bd0b_add_role_and_is_active_fields.py  2026_04_16_2030-add_is_useful_comment_to_author_replies.py
src/bot/: commands.py  providers.py
src/bot/dialogs/: __init__.py
src/bot/dialogs/common/: errors.py  filters.py  getters.py  handlers.py  validators.py  widgets.py
src/bot/dialogs/flows/courses/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/mentors/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/settings/: dialog.py  states.py
src/bot/dialogs/flows/settings/admin_settings/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/settings/user_settings/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/settings/visitor_settings/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/flows/start/: dialog.py  getters.py  handlers.py
src/bot/dialogs/flows/statistic/: dialog.py  getters.py  handlers.py  states.py
src/bot/dialogs/start/: dialog.py  getters.py  handlers.py  states.py
src/bot/middlewares/: acl.py  errors.py
src/common/: telegram_utils.py
src/core/: config.py  enum.py  logger.py  main_config.py  set_main_menu.py
src/db/: create_tables.py
src/db/models/: __init__.py  author_reply.py  course.py  mentor_reply.py  mentor_statistic.py  mixins.py  stepik_user.py  telegram_user.py  user.py
src/db/repository/: course_repo.py  mentor_reply_repo.py  reply_repo.py  statistic_repo.py  stepik_user_repo.py  tg_user_repo.py  user_repo.py
src/infrastructure/ai/: ai_client.py
src/infrastructure/di/providers/: __init__.py  bot.py  config.py  database.py  db.py  http.py  redis.py  repositories.py  services.py  session.py  stepik.py
src/infrastructure/stepik/: client.py
src/services/: statistic_service.py
src/tasks/: broker.py  mixins.py  scheduler.py  setup.py  tasks.py
