[project]
name = "stepik-mentor-metric"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "aiogram-dialog>=2.4.0",
    "dishka>=1.7.2",
    "dynaconf>=3.2.12",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

# === Ruff ===
[tool.ruff]
fix = true
line-length = 79
target-version = "py314"
exclude = ["venv", ".venv", ".mypy_cache"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Enable all major rule families:
# E,F   — pycodestyle + Pyflakes
# I     — import sorting
# UP    — pyupgrade (modern syntax)
# B     — bugbear (potential bugs)
# ANN   — type annotations
# D     — docstring checks (PEP257)
# N     — pep8-naming (strict naming conventions)
# C4    — comprehensions (clean generator/list comprehensions)
# SIM   — simplifications (code simplification suggestions)
# PL    — pylint (extra checks)
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ANN",
    "N",
    "C4",
    "SIM",
    "PL"]

# PLR2004 —  Magic value
ignore = ['ANN003']

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
