[project]
name = "stepik-mentor-metric"
version = "v0.2.6"
description = ""
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "aiogram-dialog>=2.6.0",
    "alembic>=1.18.4",
    "dishka>=1.9.1",
    "dynaconf>=3.2.13",
    "psycopg[binary]>=3.3.3",
    "pydantic==2.12.5",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "taskiq>=0.12.1",
    "taskiq-postgres[psycopg]>=0.7.0",
    "taskiq-redis>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "ty>=0.0.26"
]

# === TY ===
[tool.ty.src]
include = ["./src"]

# === Ruff ===
[tool.ruff]
fix = true
line-length = 79
target-version = "py314"
extend-exclude = ["venv", ".venv", ".mypy_cache", "tests", "src/alembic"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Enable all major rule families:
# E,F   — pycodestyle + Pyflakes
# I     — import sorting
# UP    — pyupgrade (modern syntax)
# B     — bugbear (potential bugs)
# ANN   — type annotations
# D     — docstring checks (PEP257)
# N     — pep8-naming (strict naming conventions)
# C4    — comprehensions (clean generator/list comprehensions)
# SIM   — simplifications (code simplification suggestions)
# PL    — pylint (extra checks)
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "ANN",
    "N",
    "C4",
    "SIM",
    "PL"]

# PLR2004 —  Magic value
ignore = ['ANN003']

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1

[tool.ruff.lint.pydocstyle]
convention = "google"
